--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,8 +51,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index.html" class="active">首页</a></li>
-						<li><a href="about.html">关于我们</a></li>
-						<li><a href="matches.html">展示</a></li>
+						<li><a href="../basic_message/zhaoboy">找男友</a></li>
+						<li><a href="matches.html">找女友</a></li>
 						<li class="dropdown menu__item">
 							<a href="#" class="dropdown-toggle menu__link"  data-toggle="dropdown" data-hover="Pages" role="button" aria-haspopup="true" aria-expanded="false">Pages<span class="caret"></span></a>
 							<ul class="dropdown-menu">
@@ -106,7 +106,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="clearfix"></div>
 		<!-- //banner-slider -->
-		<div class="sim-button button12"><a href="about.html">关于我们</a></div>
+		<div class="sim-button button12"><a href="about.html">个人中心</a></div>
 		<div class="agileits-social">
 			<ul>
 				<li><a href="#"><i class="fa fa-facebook"></i></a></li>
