--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -106,7 +106,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <div class="w3_form_body_grid">
                     <span>密码</span>
-                    <input type="password" id="lpwd" name="pwd" placeholder="请输入密码" maxlength="15" required>
+                    <input type="password" onblur="pwdjy()" id="lpwd" name="pwd" placeholder="请输入密码" maxlength="15" required>
                 </div>
                 <div class="agile_remember">
                     <div class="agile_remember_left">
@@ -121,7 +121,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <input type="submit" value="登录">
             </form>
-            <h4>Continue With</h4>
+            <h4><a data-toggle="modal" href="#Zhmm">找回密码</a></h4>
             <div class="social_icons agileinfo_social_asd">
                 <!-- Facebook -->
                 <a href="#" class="slide-social wthree_slide_social">
@@ -218,6 +218,40 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
 </div>
 
+<!--模态框-->
+<div class="modal fade" id="Zhmm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="myModalLabel">
+                    找回密码
+                </h4>
+            </div>
+            <div class="modal-body">
+                <!--主体内容-->
+                <form role="form" action="" method="post">
+                    <div class="form-group">
+                        <label for="modPhone">电话</label>
+                        <input type="text" class="form-control" id="modPhone" placeholder="请输入电话">
+                    </div>
+                    <div class="form-group">
+                        <label for="modyzm">验证码</label>
+                        <input type="text" class="form-control" id="modyzm" placeholder="请输入验证码">
+                        <span class="btn btn-success" id="getVcode">获取验证码</span>
+                    </div>
+                    <button type="submit" class="btn btn-default">提交</button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                </button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
 
 <!--/footer -->
 
@@ -267,7 +301,44 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         return true;
     }
 
-
+    //验证码
+    let i=30;
+    let ttm;
+    //定时器方法 按钮30秒倒计时后可用
+    function time30() {
+        $("#getVcode").html("请"+i+"秒后重试");
+        if(i>0){
+            i--;
+        }else{
+            $("#getVcode").html("获取验证码");
+            $("#getVcode").css("pointer-events","auto");
+            window.clearInterval(ttm);
+            i=30;
+        }
+    }
+    //验证码
+    $(function () {
+        let Vcode;
+        let flag=false;
+        //发送手机验证码
+        $("#getVcode").click(function () {
+            let ph=$("#modPhone").val();
+            alert(ph);
+            //判断内容不为空
+            if(Phonejy()) {
+                $.post("getPhoneVerification",
+                    {phone: ph},
+                    function (data) {
+                        alert(data);
+                        Vcode = data;
+                    });
+                //发送后设置按钮为不可用(设置鼠标点击事件不可用)
+                $("#getVcode").css("pointer-events","none");
+                //设置30秒后按钮可用
+                ttm=window.setInterval(time30,1000);
+            }
+        });
+    })
 
 </script>
 
