--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -209,7 +209,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="team-row">
 			<span th:each="b : ${list}">
-				<div class="col-md-3 w3ls-team-grids">
+				<div class="col-md-3 w3ls-team-grids" style="margin-right: 20px">
 					<h5 th:text="${b.bmname}"></h5>
 					<p th:text="${b.soliloquy}"></p>
 					<div class="agileits-social">
