--- a/src/main/resources/templates/boyfriend.html
+++ b/src/main/resources/templates/boyfriend.html
@@ -86,73 +86,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <!-- //breadcrumbs -->
 <!--team-->
-			<section class="w3ls-team text-center">
-				<div class="container">
-					<div class="tittle-agileinfo">
-						<h3>找 男 友</h3>
-					</div>
-					<div class="team-row">
-						<div class="col-md-3 w3ls-team-grids">
-							<h5>Clare</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipi est eligendi scing elit consectetur.</p>
-							<div class="agileits-social">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-rss"></i></a></li>
-								</ul>
-							</div>
-							<div class="team-img">
-								<img src="images/team1.jpg" alt="">
-							</div>
-						</div>
-						<div class="col-md-3 w3ls-team-grids team-mdl">
-							<h5>Abelard</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipi est eligendi scing elit consectetur.</p>
-							<div class="agileits-social">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-rss"></i></a></li>
-								</ul>
-							</div>
-							<div class="team-img">
-								<img src="images/team2.jpg" alt="">
-							</div>
-						</div>
-						<div class="col-md-3 w3ls-team-grids team-mdl1">
-							<h5>Daniel jack</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipi est eligendi scing elit consectetur.</p>
-							<div class="agileits-social">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-rss"></i></a></li>
-								</ul>
-							</div>
-							<div class="team-img">
-								<img src="images/team4.jpg" alt="">
-							</div>
-						</div>
-						<div class="col-md-3 w3ls-team-grids">
-							<h5>Sally</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur adipi est eligendi scing elit consectetur.</p>
-							<div class="agileits-social">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-rss"></i></a></li>
-								</ul>
-							</div>
-							<div class="team-img">
-								<img src="images/team3.jpg" alt="">
-							</div>
-						</div>
-						<div class="clearfix"> </div>
-					</div>
-				</div>
-				</section>
-			<!--//team-->
+<section class="w3ls-team text-center">
+    <div class="container">
+        <div class="tittle-agileinfo">
+            <h3>找 男 友</h3>
+        </div>
+        <div class="team-row">
+            <span th:each="b : ${boys}">
+                <div class="col-md-3 w3ls-team-grids" style="margin-right: 20px;margin-bottom: 10px">
+                        <h5 th:text="${b.bmname}"></h5>
+                        <!--<p th:if="${b.soliloquy} == null">尚未填写内心独白</p><p th:if="${l.soliloquy} != null "><p th:text="${l.soliloquy}"></p></p>-->
+                        <p th:text="${b.soliloquy}"></p>
+                        <div class="agileits-social">
+                            <ul>
+                                <li><a th:href="@{'../basic_message/findAllById?bmid='+${b.bmid}}"><i class="fa fa-twitter">详情信息</i></a></li>
+                                <!--<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-rss"></i></a></li>-->
+                            </ul>
+                        </div>
+                        <div class="team-img">
+						    <img th:src="${b.pic}" alt="">
+					    </div>
+                </div>
+            </span>
+        </div>
+    </div>
+</section>
+<!--//team-->
 <!-- footer -->
 <div class="w3l_footer">
     <div class="container">
