--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -106,7 +106,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="clearfix"></div>
 		<!-- //banner-slider -->
-		<div class="sim-button button12"><a href="about.html">个人中心</a></div>
+		<div class="sim-button button12"><a href="../basic_message/GeRen">个人中心</a></div>
 		<div class="agileits-social">
 			<ul>
 				<li><a href="#"><i class="fa fa-facebook"></i></a></li>
